[gd_scene load_steps=17 format=3 uid="uid://cra6y4y0pm2d4"]

[ext_resource type="Texture2D" uid="uid://bhljo5ulisfy1" path="res://assets/arts/Board.png" id="1_oewms"]
[ext_resource type="Script" path="res://scenes/main.gd" id="2_fybid"]
[ext_resource type="Script" path="res://scenes/player.gd" id="3_ebdp4"]
[ext_resource type="Script" path="res://scenes/cpu.gd" id="4_fde5x"]
[ext_resource type="Script" path="res://scenes/ball.gd" id="5_3unet"]
[ext_resource type="FontFile" uid="uid://jleokmdyfasg" path="res://assets/fonts/Teko-VariableFont_wght.ttf" id="6_atdu4"]
[ext_resource type="AudioStream" uid="uid://x6xtnu106vsl" path="res://assets/audio/BackgroundMusic.wav" id="7_ikdyh"]
[ext_resource type="Script" path="res://scenes/background_music.gd" id="8_h0hgm"]
[ext_resource type="AudioStream" uid="uid://b1gd4rxlj08cx" path="res://assets/audio/point.wav" id="9_l1qpr"]
[ext_resource type="AudioStream" uid="uid://b107icoat1qnp" path="res://assets/audio/ping.wav" id="10_5dgbb"]
[ext_resource type="AudioStream" uid="uid://brmmwi6qrfv4" path="res://assets/audio/pong.wav" id="11_cbsny"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h7gto"]
size = Vector2(20, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2jvgd"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0kqyb"]
size = Vector2(806, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ptggj"]
size = Vector2(807, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nfn1t"]
size = Vector2(11, 465)

[node name="Game" type="Sprite2D"]
texture_filter = 1
position = Vector2(0, 1)
texture = ExtResource("1_oewms")
centered = false
script = ExtResource("2_fybid")

[node name="Player" type="StaticBody2D" parent="."]
position = Vector2(50, 227)
script = ExtResource("3_ebdp4")

[node name="ColorRect" type="ColorRect" parent="Player"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_h7gto")

[node name="CPU" type="StaticBody2D" parent="."]
position = Vector2(752, 227)
script = ExtResource("4_fde5x")

[node name="ColorRect" type="ColorRect" parent="CPU"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -60.0
offset_bottom = 60.0
grow_horizontal = 0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CPU"]
position = Vector2(-10, 0)
shape = SubResource("RectangleShape2D_h7gto")

[node name="Ball" type="CharacterBody2D" parent="."]
position = Vector2(401, 227)
collision_mask = 3
script = ExtResource("5_3unet")

[node name="ColorRect" type="ColorRect" parent="Ball"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("RectangleShape2D_2jvgd")

[node name="Borders" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="Top" type="CollisionShape2D" parent="Borders"]
position = Vector2(401, -5)
shape = SubResource("RectangleShape2D_0kqyb")

[node name="Bottom" type="CollisionShape2D" parent="Borders"]
position = Vector2(400.5, 460)
shape = SubResource("RectangleShape2D_ptggj")

[node name="ScoreLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreLeft"]
position = Vector2(-4.5, 222.5)
shape = SubResource("RectangleShape2D_nfn1t")

[node name="ScoreRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreRight"]
position = Vector2(808, 227)
shape = SubResource("RectangleShape2D_nfn1t")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Player Score" type="Label" parent="HUD"]
offset_left = 175.0
offset_right = 215.0
offset_bottom = 72.0
theme_override_fonts/font = ExtResource("6_atdu4")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CPU Score" type="Label" parent="HUD"]
offset_left = 575.0
offset_right = 615.0
offset_bottom = 72.0
theme_override_fonts/font = ExtResource("6_atdu4")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BallTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ikdyh")
volume_db = -15.0
autoplay = true
script = ExtResource("8_h0hgm")

[node name="PointSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_l1qpr")
volume_db = 10.0

[node name="PingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_5dgbb")
volume_db = 10.0

[node name="PongSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_cbsny")
volume_db = 10.0

[connection signal="body_entered" from="ScoreLeft" to="." method="_on_score_left_body_entered"]
[connection signal="body_entered" from="ScoreRight" to="." method="_on_score_right_body_entered"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
